# emultron

./: CMakeLists.txt  INSTALL.md  README.md
src/: emultron.qrc  main.cpp
src/emultron/: emultron.cpp  emultron.h
src/gigaemul/: gigaemul.h
src/gigaemul/gigaemulf2/: gigaemulf2.cpp  gigaemulf2.h
src/gigaemul/gigaemulf3/: gigaemulf3.cpp  gigaemulf3.cpp~  gigaemulf3.h
src/gigaemuldebugwidget/: gigaemuldebugwidget.cpp  gigaemuldebugwidget.h
src/gigaemulwidget/: gigaemulwidget.cpp  gigaemulwidget.h
src/gigastate/: gigastate.h
src/misc/styledialog/: styledialog.cpp  styledialog.h
src/screendebugwidget/: screendebugwidget.cpp  screendebugwidget.h
